--- a/mold123/index.html
+++ b/mold123/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<<<<<<< HEAD
+
 	<script type='text/javascript'>
 	var googletag = googletag || {};
 	googletag.cmd = googletag.cmd || [];
@@ -36,13 +36,14 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
     <meta charset="utf-8">
 
-    <title>The Dividing Line</title>
+    <title>Maintenance Mayhem</title>
     <meta content="" name="description">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="http://d1q35ni5859stt.cloudfront.net/20151103Q1xMLLXjhg/dist/img/favicon.ico" rel="shortcut icon">
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="css/style.css" rel="stylesheet" type="text/css">
 
+	<link rel="stylesheet" type="text/css" href="style2.css">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
 
@@ -83,9 +84,9 @@
     ga('create', 'UA-707447-4', 'auto');
     ga('send', 'pageview'); 
     </script>
-    <nav class="navbar navbar-default navbar-fixed-top" style = "background-color:#8d0101" >
+    <nav class="navbar navbar-default navbar-fixed-top" style = "background-color:#000000" >
         <div class="container">
-            <div class = "navbar-header" style="width:10px;height:10px;margin:auto;background:#8d0101">
+            <div class = "navbar-header" style="width:10px;height:10px;margin:auto;background:#000000">
             <div class="navbar-header">
                 <a class="navbar-brand text-center" href=
                 "http://www.thedp.com/"><img alt="The DO" src=
@@ -97,9 +98,12 @@
     </nav>
 
     <div class="header">
-            <video width="100%" height="100%" autoplay>
+		<img width="100%" height="100%" src="https://s3.amazonaws.com/media.dpn/48654_mushroom2patgoodridgeo.jpg"></img>
+            <!-- <video width="100%" height="100%" autoplay>
                 <source src="https://s3.amazonaws.com/media.dpn/46270_final_no_sound_street_coke_title_clipo.mp4" type="video/mp4">
-            </video>
+            </video> 
+			VIDEO IF YOU NEED IT HERE
+			!--> 
     </div>
 
 	<div class="container" style="padding-left: 10%; padding-right: 10%; padding-top: 30px;">
@@ -118,7 +122,7 @@
 			
 		<p>
 			<strong>[BIG PHOTO: Picture Pat Goodridge took of cell phone with mushroom on
-		it. test]
+		it.]
 			</strong>
 		</p>
 		<!-- this is the drop cap -->
@@ -229,11 +233,9 @@
 			
 		</p>
 		<p>
-			
-		</p>
-		<p>
 			<p style="text-align:center"><b> * * *</b></p>
 		</p>
+
 		<p>
 			According to the Center
 		for Disease Control, mold "does not always present a health problem indoors."
@@ -241,6 +243,7 @@
 		mold in occupational settings" &mdash; like maintenance workers.
 			
 		</p>
+		
 		<p>
 			Lou's reticence stems
 		from having witnessed an incident in Sansom Place East where a residential
@@ -248,17 +251,16 @@
 		a similar case of mold.
 			
 		</p>
-		<p>
-			
-		</p>
-		<p>
-			<strong>[Photo: Exterior or
-		interior shot of Sansom Place West]
-			</strong>
-		</p>
-		<p>
-			
-		</p>
+		</div>  
+    <div>
+		<img style="float:right;
+		height: 500px;
+		padding-right: 30%;
+		padding-bottom: 2%" src="https://s3.amazonaws.com/media.dpn/48653_section_1_stuffo.jpg">
+		
+        <br> 
+    </div>
+    <div class="container" style="padding-left: 10%; padding-right: 10%;">
 		<p>
 			Mold has not been known to cause rashes, but the Institute of
 		Medicine found in 2004 that exposure to it indoors can cause respiratory
@@ -369,9 +371,20 @@
 			
 		</p>
 		<p>
-			<strong>[GRAPHIC: Different
-		organizations working on the mold]
-			</strong>
+			<div class="piktowrapper-embed" pikto-uid="9288750-different-organizations-working-on-sept-17-mold-case" >
+				<div class="pikto-canvas-wrap">
+					<div class="pikto-canvas"></div>
+				</div>
+			</div>
+			<script>
+				(function(d){
+					var js, id="pikto-embed-js", ref=d.getElementsByTagName("script")[0];
+					if (d.getElementById(id)) { return;}
+					js=d.createElement("script"); js.id=id; js.async=true;
+					js.src="https://magic.piktochart.com/assets/embedding/embed.js";
+					ref.parentNode.insertBefore(js, ref);
+				}(document));
+			</script>
 		</p>
 		<p>
 			
@@ -448,9 +461,9 @@
 			
 		</p>
 		<p>
-			<strong>[PULL QUOTE: </strong>"If I
+			<blockquote>"If I
 		were you, I would never drink from a water fountain here."
-			<strong>]</strong>
+			</blockquote>
 		</p>
 		<p>
 			<strong></strong>
@@ -527,12 +540,8 @@
 				<p><i>*Names have been changed to protect students’ identities. </i></p>
 
 				<p><i>
-					Jill Castellano is a junior from Westchester, New York majoring in criminology and psychology. She is the Managing Editor and Editor–in–Chief of the Daily Pennsylvanian. 
+					Dan Spinelli is a sophomore from North Wales, Pennsylvania majoring in English with a concentration in creative writing. He is the City News Editor-elect of the Daily Pennsylvanian. 
 			</i></p>
-			<p><i>
-		Casey Quakenbush is a sophomore from Greenwich, Connecticut majoring in English with a concentration in creative writing. She is the Ego editor of 34th Street Magazine. 
-				</i></p>
-				
 	</div>
 	
 </div>
@@ -562,15 +571,15 @@
     <footer>
         <div class="footer-bar" style="align:center">
             <br> </br>
-                <p> Created by <a style = "color:white" href="http://dhruvagarwal.me">Dhruv Agarwal</a> | Jospeh Gao | Luke Chen</p>
+                <p> Created by Luke Chen</p>
                 <hr style="width:50%">
                 <p>The DP has a growing web development team. If you are interested in joining please email <a style = "color:white" href="chen@thedp.com">chen@thedp.com</a></p>
             <hr style="width:50%">
             <div class="social-media">
             <!-- FACEBOOK -->
-                <a href="https://www.facebook.com/34thstreetmagazine"><svg class="svg-icon" viewBox="0 0 20 20"><path fill="none" d="M10,0.5c-5.247,0-9.5,4.253-9.5,9.5c0,5.247,4.253,9.5,9.5,9.5c5.247,0,9.5-4.253,9.5-9.5C19.5,4.753,15.247,0.5,10,0.5 M10,18.637c-4.77,0-8.636-3.867-8.636-8.637S5.23,1.364,10,1.364S18.637,5.23,18.637,10S14.77,18.637,10,18.637 M10.858,7.949c0-0.349,0.036-0.536,0.573-0.536h0.719v-1.3H11c-1.38,0-1.866,0.65-1.866,1.743v0.845h-0.86V10h0.86v3.887h1.723V10h1.149l0.152-1.299h-1.302L10.858,7.949z"></path></svg></a>
+                <a href="https://www.facebook.com/dailypenn"><svg class="svg-icon" viewBox="0 0 20 20"><path fill="none" d="M10,0.5c-5.247,0-9.5,4.253-9.5,9.5c0,5.247,4.253,9.5,9.5,9.5c5.247,0,9.5-4.253,9.5-9.5C19.5,4.753,15.247,0.5,10,0.5 M10,18.637c-4.77,0-8.636-3.867-8.636-8.637S5.23,1.364,10,1.364S18.637,5.23,18.637,10S14.77,18.637,10,18.637 M10.858,7.949c0-0.349,0.036-0.536,0.573-0.536h0.719v-1.3H11c-1.38,0-1.866,0.65-1.866,1.743v0.845h-0.86V10h0.86v3.887h1.723V10h1.149l0.152-1.299h-1.302L10.858,7.949z"></path></svg></a>
             <!-- TWITTER  -->
-                <a href="https://www.twitter.com/34st"><svg class="svg-icon" viewBox="0 0 20 20"><path fill="none" d="M14.467,6.707c-0.34,0.198-0.715,0.342-1.115,0.419c-0.318-0.335-0.775-0.545-1.279-0.545c-0.969,0-1.754,0.773-1.754,1.727c0,0.135,0.015,0.267,0.045,0.394C8.905,8.628,7.612,7.94,6.747,6.896C6.596,7.151,6.509,7.448,6.509,7.764c0,0.599,0.31,1.128,0.78,1.438C7.002,9.192,6.732,9.115,6.495,8.985c0,0.007,0,0.014,0,0.021c0,0.837,0.605,1.535,1.408,1.694c-0.147,0.04-0.302,0.06-0.462,0.06c-0.113,0-0.223-0.011-0.33-0.031c0.223,0.687,0.871,1.186,1.638,1.199c-0.6,0.464-1.356,0.739-2.179,0.739c-0.142,0-0.281-0.007-0.418-0.023c0.777,0.489,1.699,0.775,2.689,0.775c3.228,0,4.991-2.63,4.991-4.913c0-0.075-0.002-0.149-0.004-0.223c0.342-0.244,0.639-0.547,0.875-0.894c-0.316,0.137-0.652,0.23-1.008,0.272C14.057,7.448,14.336,7.11,14.467,6.707 M10,0.594c-5.195,0-9.406,4.211-9.406,9.406c0,5.195,4.211,9.406,9.406,9.406c5.196,0,9.407-4.211,9.407-9.406C19.406,4.805,15.195,0.594,10,0.594 M10,18.552c-4.723,0-8.551-3.829-8.551-8.552S5.277,1.449,10,1.449c4.723,0,8.551,3.829,8.551,8.551S14.723,18.552,10,18.552"></path></svg></a>
+                <a href="https://www.twitter.com/dailypenn"><svg class="svg-icon" viewBox="0 0 20 20"><path fill="none" d="M14.467,6.707c-0.34,0.198-0.715,0.342-1.115,0.419c-0.318-0.335-0.775-0.545-1.279-0.545c-0.969,0-1.754,0.773-1.754,1.727c0,0.135,0.015,0.267,0.045,0.394C8.905,8.628,7.612,7.94,6.747,6.896C6.596,7.151,6.509,7.448,6.509,7.764c0,0.599,0.31,1.128,0.78,1.438C7.002,9.192,6.732,9.115,6.495,8.985c0,0.007,0,0.014,0,0.021c0,0.837,0.605,1.535,1.408,1.694c-0.147,0.04-0.302,0.06-0.462,0.06c-0.113,0-0.223-0.011-0.33-0.031c0.223,0.687,0.871,1.186,1.638,1.199c-0.6,0.464-1.356,0.739-2.179,0.739c-0.142,0-0.281-0.007-0.418-0.023c0.777,0.489,1.699,0.775,2.689,0.775c3.228,0,4.991-2.63,4.991-4.913c0-0.075-0.002-0.149-0.004-0.223c0.342-0.244,0.639-0.547,0.875-0.894c-0.316,0.137-0.652,0.23-1.008,0.272C14.057,7.448,14.336,7.11,14.467,6.707 M10,0.594c-5.195,0-9.406,4.211-9.406,9.406c0,5.195,4.211,9.406,9.406,9.406c5.196,0,9.407-4.211,9.407-9.406C19.406,4.805,15.195,0.594,10,0.594 M10,18.552c-4.723,0-8.551-3.829-8.551-8.552S5.277,1.449,10,1.449c4.723,0,8.551,3.829,8.551,8.551S14.723,18.552,10,18.552"></path></svg></a>
             </div>
         </div>
     </footer>
