--- a/mold123/index.html
+++ b/mold123/index.html
@@ -43,7 +43,6 @@
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="css/style.css" rel="stylesheet" type="text/css">
 
-	<link rel="stylesheet" type="text/css" href="style2.css">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
 
@@ -112,6 +111,25 @@
 		</p>
 	</div>
   
+	<center>
+		<table cellspacing=12> 
+			<tr>
+				<td>
+					<img style=" height: 200px; padding-bottom: 2%; border-spacing: 20px" src="https://s3.amazonaws.com/media.dpn/48653_section_1_stuffo.jpg">
+				</td>
+				<td>
+					<img style=" height: 200px; padding-bottom: 2%;  border-spacing: 20px" src="https://s3.amazonaws.com/media.dpn/48653_section_1_stuffo.jpg">
+
+				</td>
+				<td>
+					<img style=" height: 200px; padding-bottom: 2%" src="https://s3.amazonaws.com/media.dpn/48653_section_1_stuffo.jpg">
+				</td>
+				<td>
+				</td>
+			</tr>
+		</table>
+	</center>
+		
     <div class="container" style="padding-left: 10%; padding-right: 10%; padding-top: 30px;">
 
 				
@@ -120,11 +138,6 @@
 		<h2 style="text-align:center;padding-left:15%"> Moldy
 		walls, sour management </h2>
 			
-		<p>
-			<strong>[BIG PHOTO: Picture Pat Goodridge took of cell phone with mushroom on
-		it.]
-			</strong>
-		</p>
 		<!-- this is the drop cap -->
 				<p style=
 				"float:left;color:##000000;font-size:57px;line-height:40px;padding-top:7px; padding-right:5px;font-family: Times, serif, Georgia;">O</p>
