added the 4 pics

--- a/mold123/index.html
+++ b/mold123/index.html
@@ -107,7 +107,7 @@
 
 	<div class="container" style="padding-left: 10%; padding-right: 10%; padding-top: 30px;">
 		<p>
-		Mold Abstract. By Dan Spinelli
+		From mushrooms growing out of moldy walls to excrement-covered floors, Penn maintenance workers have seen it all. Now, they’re speaking out. In this four-day series, The Daily Pennsylvanian explores why a culture of distrust and dysfunction among maintenance workers, managers and contractors contributes to safety hazards for students and inefficiency for the University. 
 		</p>
 	</div>
   
@@ -115,16 +115,17 @@
 		<table cellspacing=12> 
 			<tr>
 				<td>
-					<img style=" height: 200px; padding-bottom: 2%; border-spacing: 20px" src="https://s3.amazonaws.com/media.dpn/48653_section_1_stuffo.jpg">
+					<img style=" height: 300px; padding-bottom: 2%; padding: 20px" src="https://s3.amazonaws.com/media.dpn/48653_section_1_stuffo.jpg">
 				</td>
 				<td>
-					<img style=" height: 200px; padding-bottom: 2%;  border-spacing: 20px" src="https://s3.amazonaws.com/media.dpn/48653_section_1_stuffo.jpg">
+					<img style=" height: 300px; padding-bottom: 2%;  padding: 20px" src="https://s3.amazonaws.com/media.dpn/48653_section_1_stuffo.jpg">
 
 				</td>
 				<td>
-					<img style=" height: 200px; padding-bottom: 2%" src="https://s3.amazonaws.com/media.dpn/48653_section_1_stuffo.jpg">
+					<img style=" height: 300px; padding-bottom: 2%; padding: 20px" src="https://s3.amazonaws.com/media.dpn/48653_section_1_stuffo.jpg">
 				</td>
 				<td>
+					<img style=" height: 300px; padding-bottom: 2%; padding: 20px" src="https://s3.amazonaws.com/media.dpn/48653_section_1_stuffo.jpg">
 				</td>
 			</tr>
 		</table>
