--- a/mold123/index.html
+++ b/mold123/index.html
@@ -104,34 +104,46 @@
 			VIDEO IF YOU NEED IT HERE
 			!--> 
     </div>
-
-	<div class="container" style="padding-left: 10%; padding-right: 10%; padding-top: 30px;">
-		<p>
-		From mushrooms growing out of moldy walls to excrement-covered floors, Penn maintenance workers have seen it all. Now, they’re speaking out. In this four-day series, The Daily Pennsylvanian explores why a culture of distrust and dysfunction among maintenance workers, managers and contractors contributes to safety hazards for students and inefficiency for the University. 
-		</p>
-	</div>
-  
+	
 	<center>
-		<table cellspacing=12> 
-			<tr>
-				<td>
-					<img style=" height: 300px; padding-bottom: 2%; padding: 20px" src="https://s3.amazonaws.com/media.dpn/48653_section_1_stuffo.jpg">
+		<table cellspacing=12 style="margin-left: 20px; margin-top: 60px"> 
+			<tr style="font-size: 30px">
+				<td style="text-align:center">
+					Part 1 : <br> Moldy Walls, Sour Management
 				</td>
-				<td>
-					<img style=" height: 300px; padding-bottom: 2%;  padding: 20px" src="https://s3.amazonaws.com/media.dpn/48653_section_1_stuffo.jpg">
+				<td style="text-align:center">
+					Part 2 : <br> No water, no heat
+				</td>
+				<td style="text-align:center">
+					Part 1
+				</td>
+				<td style="text-align:center">
+					Part 1
+				</td>
+			</tr>
+			<tr>
+				<td style="text-align:center">
+					<img style=" height: 250px; padding-bottom: 2%; padding: 20px" src="https://s3.amazonaws.com/media.dpn/48653_section_1_stuffo.jpg">
+				</td>
+				<td style="text-align:center">
+					<img style=" height: 250px; padding-bottom: 2%;  padding: 20px" src="https://s3.amazonaws.com/media.dpn/48657_toiletspatgoodridgeo.jpg">
 
 				</td>
 				<td>
-					<img style=" height: 300px; padding-bottom: 2%; padding: 20px" src="https://s3.amazonaws.com/media.dpn/48653_section_1_stuffo.jpg">
+					<img style=" height: 250px; padding-bottom: 2%; padding: 20px" src="https://s3.amazonaws.com/media.dpn/48658_movingoutananyachandrao.jpg">
 				</td>
 				<td>
-					<img style=" height: 300px; padding-bottom: 2%; padding: 20px" src="https://s3.amazonaws.com/media.dpn/48653_section_1_stuffo.jpg">
+					<img style=" height: 250px; padding-bottom: 2%; padding: 20px" src="https://s3.amazonaws.com/media.dpn/48656_email_invoicesananyachandrao.jpg">
 				</td>
 			</tr>
 		</table>
 	</center>
 		
-    <div class="container" style="padding-left: 10%; padding-right: 10%; padding-top: 30px;">
+	<p style="font-size: 30px; margin-left: 10%; max-width: 1200px">
+	From mushrooms growing out of moldy walls to excrement-covered floors, Penn maintenance workers have seen it all. Now, they’re speaking out. In this four-day series, The Daily Pennsylvanian explores why a culture of distrust and dysfunction among maintenance workers, managers and contractors contributes to safety hazards for students and inefficiency for the University. 
+	</p>
+	
+    <div class="container" style="margin-left: 10%; padding-right: 10%; padding-top: 30px; position: relative">
 
 				
 		 
@@ -270,11 +282,13 @@
 		<img style="float:right;
 		height: 500px;
 		padding-right: 30%;
+		padding-left: 3%;
+		padding-top: 5%;
 		padding-bottom: 2%" src="https://s3.amazonaws.com/media.dpn/48653_section_1_stuffo.jpg">
 		
         <br> 
     </div>
-    <div class="container" style="padding-left: 10%; padding-right: 10%;">
+    <div class="container" style="margin-left: 10%; padding-right: 10%; padding-top: 30px; position: relative">
 		<p>
 			Mold has not been known to cause rashes, but the Institute of
 		Medicine found in 2004 that exposure to it indoors can cause respiratory
