--- a/mold123/index.html
+++ b/mold123/index.html
@@ -114,8 +114,8 @@
 				<td style="text-align:center">
 					Part 2 : <br> No water, no heat
 				</td>
-				<td style="text-align:center">
-					Part 1
+				<td style="text-align:center; font-size: 25px">
+					Part 1 <br> Students displaced because of<br>  slow maintenance response times
 				</td>
 				<td style="text-align:center">
 					Part 1
