more updates width

--- a/mold123/index.html
+++ b/mold123/index.html
@@ -106,24 +106,24 @@
     </div>
 	
 	<center>
-		<table cellspacing=12 style="margin-left: 20px; margin-top: 60px"> 
+		<table cellspacing=12 style="margin-left: 20px; margin-top: 60px; max-width: 100%"> 
 			<tr style="font-size: 30px">
 				<td style="text-align:center">
-					Part 1 : <br> Moldy Walls, Sour Management
+					<strong>Part 1</strong>  <br> Moldy Walls, Sour Management
 				</td>
 				<td style="text-align:center">
-					Part 2 : <br> No water, no heat
+					<strong>Part 2</strong> <br> No water, no heat
 				</td>
 				<td style="text-align:center; font-size: 25px">
-					Part 1 <br> Students displaced because of<br>  slow maintenance response times
+					<strong>Part 3</strong> <br> Students displaced because of<br>  slow maintenance response times
 				</td>
 				<td style="text-align:center">
-					Part 1
+					<strong> Part 4</strong> <br> Division and dysfunction <br> among maintenance staff
 				</td>
 			</tr>
-			<tr>
+			<tr style="width: 100%">
 				<td style="text-align:center">
-					<img style=" height: 250px; padding-bottom: 2%; padding: 20px" src="https://s3.amazonaws.com/media.dpn/48653_section_1_stuffo.jpg">
+					<img style=" height: 250px; padding-bottom: 2%; padding: 20px" src="https://s3.amazonaws.com/media.dpn/48654_mushroom2patgoodridgeo.jpg">
 				</td>
 				<td style="text-align:center">
 					<img style=" height: 250px; padding-bottom: 2%;  padding: 20px" src="https://s3.amazonaws.com/media.dpn/48657_toiletspatgoodridgeo.jpg">
@@ -142,7 +142,7 @@
 	<p style="font-size: 30px; margin-left: 10%; max-width: 1200px">
 	From mushrooms growing out of moldy walls to excrement-covered floors, Penn maintenance workers have seen it all. Now, they’re speaking out. In this four-day series, The Daily Pennsylvanian explores why a culture of distrust and dysfunction among maintenance workers, managers and contractors contributes to safety hazards for students and inefficiency for the University. 
 	</p>
-	
+	<p style="font-size: 30px; margin-left: 10%; max-width: 1200px"> <strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;  By Dan Spinelli </strong> </p>
     <div class="container" style="margin-left: 10%; padding-right: 10%; padding-top: 30px; position: relative">
 
 				
@@ -563,10 +563,7 @@
 			
 			<br>
 			<br>
-			<br>
 				<hr style="size:2;padding-left:15%;"/>
-				<p><i>*Names have been changed to protect students’ identities. </i></p>
-
 				<p><i>
 					Dan Spinelli is a sophomore from North Wales, Pennsylvania majoring in English with a concentration in creative writing. He is the City News Editor-elect of the Daily Pennsylvanian. 
 			</i></p>
