more updates width

--- a/mold123/index.html
+++ b/mold123/index.html
@@ -106,33 +106,22 @@
     </div>
 	
 	<center>
-		<table cellspacing=12 style="margin-left: 20px; margin-top: 60px; max-width: 100%"> 
-			<tr style="font-size: 30px">
-				<td style="text-align:center">
+		<table style="margin-left: 20px; margin-top: 60px"> 
+			<tr style="font-size:30px; height:350px">
+				<td style="text-align:center" valign="bottom">
 					<strong>Part 1</strong>  <br> Moldy Walls, Sour Management
+					<img style=" height: 250px; padding-bottom: 2%; padding: 30px; align: left" src="https://s3.amazonaws.com/media.dpn/48654_mushroom2patgoodridgeo.jpg">
 				</td>
-				<td style="text-align:center">
+				<td style="text-align:center" valign="bottom">
 					<strong>Part 2</strong> <br> No water, no heat
+					<img style=" height: 250px; padding-bottom: 2%;  padding: 20px; align: left" src="https://s3.amazonaws.com/media.dpn/48657_toiletspatgoodridgeo.jpg">
 				</td>
-				<td style="text-align:center; font-size: 25px">
-					<strong>Part 3</strong> <br> Students displaced because of<br>  slow maintenance response times
-				</td>
-				<td style="text-align:center">
-					<strong> Part 4</strong> <br> Division and dysfunction <br> among maintenance staff
-				</td>
-			</tr>
-			<tr style="width: 100%">
-				<td style="text-align:center">
-					<img style=" height: 250px; padding-bottom: 2%; padding: 20px" src="https://s3.amazonaws.com/media.dpn/48654_mushroom2patgoodridgeo.jpg">
-				</td>
-				<td style="text-align:center">
-					<img style=" height: 250px; padding-bottom: 2%;  padding: 20px" src="https://s3.amazonaws.com/media.dpn/48657_toiletspatgoodridgeo.jpg">
-
-				</td>
-				<td>
+				<td style="text-align:center; align: left; width: 10%" valign="bottom">
+					<strong>Part 3</strong> <br> Students displaced because of slow maintenance response times
 					<img style=" height: 250px; padding-bottom: 2%; padding: 20px" src="https://s3.amazonaws.com/media.dpn/48658_movingoutananyachandrao.jpg">
 				</td>
-				<td>
+				<td style="text-align:center; align: left; width: 10%" valign="bottom">
+					<strong> Part 4</strong> <br> Division and dysfunction among maintenance staff
 					<img style=" height: 250px; padding-bottom: 2%; padding: 20px" src="https://s3.amazonaws.com/media.dpn/48656_email_invoicesananyachandrao.jpg">
 				</td>
 			</tr>
