last working width

--- a/mold123/index.html
+++ b/mold123/index.html
@@ -104,34 +104,33 @@
 			VIDEO IF YOU NEED IT HERE
 			!--> 
     </div>
+	<p style="font-size: 30px; margin-left: 10%; max-width: 1200px">
+	From mushrooms growing out of moldy walls to excrement-covered floors, Penn maintenance workers have seen it all. Now, they’re speaking out. In this four-day series, The Daily Pennsylvanian explores why a culture of distrust and dysfunction among maintenance workers, managers and contractors contributes to safety hazards for students and inefficiency for the University. 
+	</p>
+	<p style="font-size: 30px; margin-left: 10%; max-width: 1200px"> <strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;  By Dan Spinelli </strong> </p>
 	
-	<center>
-		<table style="margin-left: 20px; margin-top: 60px"> 
-			<tr style="font-size:30px; height:350px">
-				<td style="text-align:center" valign="bottom">
+		<table width="100%" style="margin-left: 20px; margin-top: 60px; display: block; display:inline-block;" > 
+			<tr style="font-size:30px">
+				<td style="text-align:center; width: 10%" valign="bottom">
 					<strong>Part 1</strong>  <br> Moldy Walls, Sour Management
 					<img style=" height: 250px; padding-bottom: 2%; padding: 30px; align: left" src="https://s3.amazonaws.com/media.dpn/48654_mushroom2patgoodridgeo.jpg">
 				</td>
-				<td style="text-align:center" valign="bottom">
+				<td style="text-align:center; width: 10%" valign="bottom">
 					<strong>Part 2</strong> <br> No water, no heat
 					<img style=" height: 250px; padding-bottom: 2%;  padding: 20px; align: left" src="https://s3.amazonaws.com/media.dpn/48657_toiletspatgoodridgeo.jpg">
 				</td>
-				<td style="text-align:center; align: left; width: 10%" valign="bottom">
+				<td style="text-align:center; width: 10%" valign="bottom">
 					<strong>Part 3</strong> <br> Students displaced because of slow maintenance response times
 					<img style=" height: 250px; padding-bottom: 2%; padding: 20px" src="https://s3.amazonaws.com/media.dpn/48658_movingoutananyachandrao.jpg">
 				</td>
-				<td style="text-align:center; align: left; width: 10%" valign="bottom">
+				<td style="text-align:center; width: 10%" valign="bottom">
 					<strong> Part 4</strong> <br> Division and dysfunction among maintenance staff
 					<img style=" height: 250px; padding-bottom: 2%; padding: 20px" src="https://s3.amazonaws.com/media.dpn/48656_email_invoicesananyachandrao.jpg">
 				</td>
 			</tr>
 		</table>
-	</center>
-		
-	<p style="font-size: 30px; margin-left: 10%; max-width: 1200px">
-	From mushrooms growing out of moldy walls to excrement-covered floors, Penn maintenance workers have seen it all. Now, they’re speaking out. In this four-day series, The Daily Pennsylvanian explores why a culture of distrust and dysfunction among maintenance workers, managers and contractors contributes to safety hazards for students and inefficiency for the University. 
-	</p>
-	<p style="font-size: 30px; margin-left: 10%; max-width: 1200px"> <strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;  By Dan Spinelli </strong> </p>
+
+
     <div class="container" style="margin-left: 10%; padding-right: 10%; padding-top: 30px; position: relative">
 
 				
@@ -267,16 +266,18 @@
 			
 		</p>
 		</div>  
-    <div>
+    <p>
 		<img style="float:right;
-		height: 500px;
-		padding-right: 30%;
+		max-height: 500px;
+		max-width: 100%;
+		
+		padding-right: 25%;
 		padding-left: 3%;
 		padding-top: 5%;
 		padding-bottom: 2%" src="https://s3.amazonaws.com/media.dpn/48653_section_1_stuffo.jpg">
 		
         <br> 
-    </div>
+    </p>
     <div class="container" style="margin-left: 10%; padding-right: 10%; padding-top: 30px; position: relative">
 		<p>
 			Mold has not been known to cause rashes, but the Institute of
