added other photos

--- a/mold123/index.html
+++ b/mold123/index.html
@@ -104,7 +104,7 @@
 			VIDEO IF YOU NEED IT HERE
 			!--> 
     </div>
-	<p style="font-size: 30px; margin-left: 10%; max-width: 1200px">
+		<p style="font-size: 30px; margin-left: 10%; max-width: 1200px; margin-top: 50px">
 	From mushrooms growing out of moldy walls to excrement-covered floors, Penn maintenance workers have seen it all. Now, they’re speaking out. In this four-day series, The Daily Pennsylvanian explores why a culture of distrust and dysfunction among maintenance workers, managers and contractors contributes to safety hazards for students and inefficiency for the University. 
 	</p>
 	<p style="font-size: 30px; margin-left: 10%; max-width: 1200px"> <strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;  By Dan Spinelli </strong> </p>
