--- a/mold123/index2.html
+++ b/mold123/index2.html
@@ -97,33 +97,33 @@
     </nav>
 
     <div class="header">
-		<img width="100%" height="100%" src="https://s3.amazonaws.com/media.dpn/48657_toiletspatgoodridgeo.jpg"></img>
+		<img width="100%" height="100%" src="https://s3.amazonaws.com/media.dpn/48664_toiletspatgoodridgecuto.jpg"></img>
             <!-- <video width="100%" height="100%" autoplay>
                 <source src="https://s3.amazonaws.com/media.dpn/46270_final_no_sound_street_coke_title_clipo.mp4" type="video/mp4">
             </video> 
 			VIDEO IF YOU NEED IT HERE
 			!--> 
     </div>
-		<p style="font-size: 30px; margin-left: 10%; max-width: 1200px">
+		<p style="font-size: 30px; margin-left: 10%; max-width: 1200px; margin-top: 50px">
 	From mushrooms growing out of moldy walls to excrement-covered floors, Penn maintenance workers have seen it all. Now, they’re speaking out. In this four-day series, The Daily Pennsylvanian explores why a culture of distrust and dysfunction among maintenance workers, managers and contractors contributes to safety hazards for students and inefficiency for the University. 
 	</p>
 	<p style="font-size: 30px"> <strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;  By Dan Spinelli </strong> </p>
 	
-		<table width="100%" style="margin-left: 10px; margin-right: 10px; margin-top: 60px; display: block" > 
+		<table width="100%" style="margin-left: 10px; margin-right: 10px; margin-top: 60px; display: block; table-layout:fixed;" > 
 			<tr style="font-size:30px;  display: block">
-				<td style="text-align:center; width: 10%" valign="bottom">
+				<td style="text-align:center; width: 10%;word-wrap: break-word" valign="bottom">
 					<div> <strong>Part 1</strong>  <br> Moldy Walls, Sour Management </div>
 					<img style=" height: 250px; padding-bottom: 2%; padding: 20px" src="https://s3.amazonaws.com/media.dpn/48654_mushroom2patgoodridgeo.jpg">
 				</td>
-				<td style="text-align:center; width: 10%" valign="bottom">
+				<td style="text-align:center; width: 10%; word-wrap: break-word" valign="bottom">
 					<div> <strong>Part 2</strong> <br> No water, no heat</div>
 					<img style=" height: 250px; padding-bottom: 2%;  padding: 20px" src="https://s3.amazonaws.com/media.dpn/48657_toiletspatgoodridgeo.jpg">
 				</td>
-				<td style="text-align:center; width: 10%" valign="bottom">
+				<td style="text-align:center; width: 10%; word-wrap: break-word" valign="bottom">
 					<div> <strong>Part 3</strong> <br> Students displaced because of slow maintenance response times </div>
 					<img style=" height: 250px; padding-bottom: 2%; padding: 20px" src="https://s3.amazonaws.com/media.dpn/48658_movingoutananyachandrao.jpg">
 				</td>
-				<td style="text-align:center; width: 10%" valign="bottom">
+				<td style="text-align:center; width: 10%; word-wrap: break-word" valign="bottom">
 					<div> <strong> Part 4</strong> <br> Division and dysfunction among maintenance staff </div>
 					<img style=" height: 250px; padding-bottom: 2%; padding: 20px" src="https://s3.amazonaws.com/media.dpn/48656_email_invoicesananyachandrao.jpg">
 				</td>
