--- a/mold123/index2.html
+++ b/mold123/index2.html
@@ -97,7 +97,7 @@
     </nav>
 
     <div class="header">
-		<img width="100%" height="100%" src="https://s3.amazonaws.com/media.dpn/48664_toiletspatgoodridgecuto.jpg"></img>
+		<img width="100%" height="100%" src="https://s3.amazonaws.com/media.dpn/48662_toiletspatgoodridgecuto.jpg"></img>
             <!-- <video width="100%" height="100%" autoplay>
                 <source src="https://s3.amazonaws.com/media.dpn/46270_final_no_sound_street_coke_title_clipo.mp4" type="video/mp4">
             </video> 
@@ -135,9 +135,6 @@
 
 		<!-- part 2 !-->
 		<h2 style="text-align:center;padding-left:15%"> No water, no heat </h2>
-		<p>
-			<strong>[BIG Photo (one of Pat Goodridge's shots of utility rooms)]</strong>
-		</p>
 		<!-- this is the drop cap -->
 				<p style=
 				"float:left;color:##000000;font-size:57px;line-height:40px;padding-top:7px; padding-right:5px;font-family: Times, serif, Georgia;">O</p>
@@ -194,15 +191,13 @@
 		mezzanine.
 			
 		</p>
-		<p>
-			
-		</p>
-		<p>
-			[<strong>UTB Video of Harnwell
-		mezz leak
-			</strong>]
-		</p>
-		<p>
+	</div>
+	<div style="float:right; padding-right: 30%; padding-left: 30px; padding-bottom: 30px">
+		<video height="600px" autoplay style="float:right">
+			<source src="https://s3.amazonaws.com/media.dpn/48672_imrancronkfbdownneto.mp4" type="video/mp4">
+		</video> 
+	</div>
+	<div class="container" style="margin-left: 10%; padding-right: 10%; padding-top: 30px; position: relative">
 			
 		</p>
 		<p>
@@ -267,11 +262,9 @@
 			
 		</p>
 		<p>
-			[<strong>PULL
-		QUOTE: 
-			</strong>"How many times can we apologize? My heart goes out to these kids
+			<blockquote> "How many times can we apologize? My heart goes out to these kids
 		because their parents are paying so much to live here" -Jim
-			<strong>]</strong>
+			</blockquote>
 		</p>
 		<p>
 			<strong></strong>Behind the scenes, FRES employees said the
@@ -351,14 +344,21 @@
 		cyclically occur. 
 			
 		</p>
-		<p>
-			
-		</p>
-		<p>
-			[<strong>INFOGRAPHIC: Why Water
-		Shortages Occur]
-			</strong>
-		</p>
+
+		<div class="piktowrapper-embed" pikto-uid="9288264-why-do-water-shortages-happen" >
+			<div class="pikto-canvas-wrap">
+				<div class="pikto-canvas"></div>
+			</div>
+		</div>
+		<script>
+			(function(d){
+				var js, id="pikto-embed-js", ref=d.getElementsByTagName("script")[0];
+				if (d.getElementById(id)) { return;}
+				js=d.createElement("script"); js.id=id; js.async=true;
+				js.src="https://magic.piktochart.com/assets/embedding/embed.js";
+				ref.parentNode.insertBefore(js, ref);
+			}(document));
+		</script>
 		<p>
 			
 		</p>
@@ -492,17 +492,19 @@
 		<p>
 			It was unclear why
 		Papageorge was not aware of the conversation among her underlings about
-		possible repairs to the water system.
-			
+		possible repairs to the water system.			
 		</p>
-		<p>
-			<o:p></o:p>
-		</p>
-		<p>
-			<strong>[BIG PHOTO: Snapshot of
-		Jill's emails from Rodin]
-			</strong>
-		</p>
+
+		</div>
+	<div>
+		<br>
+		<center> 
+		
+			<img class="photo" width = "80%" src="https://s3.amazonaws.com/media.dpn/48674_rodinemailananyachandraf.JPG">
+		</center>
+		<br>
+	</div>
+    <div class="container" style="margin-left: 10%; padding-right: 10%; padding-top: 30px; position: relative">
 		<p>
 			Despite the recent installation of "redundancies" in the water
 		systems, maintenance workers still expressed little faith in the system's
@@ -599,9 +601,9 @@
 			
 		</p>
 		<p>
-			<strong>[PULL QUOTE: </strong>"The problem with the high rises and the hot water was
+			<blockquote>"The problem with the high rises and the hot water was
 		shit-poor engineering," Jim said."
-			<strong>]</strong>
+			</blockquote>
 		</p>
 		<p>
 			Jim's frustration
@@ -647,7 +649,7 @@
 			<p style="text-align:center"><b> * * *</b></p>
 		</p>
 		<p>
-			<strong></strong>Regardless of their time on the job or
+			Regardless of their time on the job or
 		mechanical specialty, all employees interviewed reported similar roadblocks and
 		obstructions in FRES' hierarchy of managers. A report to an area manager that
 		goes unheeded often gets passed on to an upper-level supervisor, which
