--- a/mold123/index3.html
+++ b/mold123/index3.html
@@ -97,12 +97,10 @@
     </nav>
 
     <div class="header">
-		<img width="100%" height="100%" src="http://media.dpn.s3.amazonaws.com/48665_movingoutananyachandraedito.jpg"></img>
-            <!-- <video width="100%" height="100%" autoplay>
-                <source src="https://s3.amazonaws.com/media.dpn/46270_final_no_sound_street_coke_title_clipo.mp4" type="video/mp4">
+		<video width="100%" height="100%" autoplay loop muted>
+			<source src="https://s3.amazonaws.com/media.dpn/48655_sinkananyachandrao.mp4" type="video/mp4">
             </video> 
-			VIDEO IF YOU NEED IT HERE
-			!--> 
+
     </div>
 		<p style="font-size: 30px; margin-left: 10%; max-width: 1200px; margin-top: 50px">
 	From mushrooms growing out of moldy walls to excrement-covered floors, Penn maintenance workers have seen it all. Now, they’re speaking out. In this four-day series, The Daily Pennsylvanian explores why a culture of distrust and dysfunction among maintenance workers, managers and contractors contributes to safety hazards for students and inefficiency for the University. 
@@ -173,9 +171,7 @@
 			
 		</p>
 		<p>
-			<strong>SECTION TITLE: ‘Wait
-		until tomorrow'
-			</strong>
+			<h2>‘Wait until tomorrow'</h2>
 		</p>
 		<p>
 			<strong></strong>
@@ -241,6 +237,17 @@
 		House last year, were displaced by a sewage leak last October.
 			
 		</p>
+			
+		<p>
+			<img style="float:right;
+			max-height: 500px;
+			max-width: 100%;
+			padding-right: 25%;
+			padding-left: 3%;
+			padding-top: 5%;
+			padding-bottom: 2%" src="https://s3.amazonaws.com/media.dpn/48671_portrait1carsonkahoeo.jpg">
+
+		</p>
 		<p>
 			"Water just started
 		seeping through our ceiling," Cadwallader recalled. "I didn't really know what
@@ -260,17 +267,7 @@
 		their floor and the floor above them were displaced by the leak, they recalled.
 			
 		</p>
-		<p>
-			
-		</p>
-		<p>
-			<strong>[Photo: Carson's
-		portrait shot of Rive and Taylor]
-			</strong>
-		</p>
-		<p>
-			
-		</p>
+
 		<p>
 			Administrators attribute the wait time to an overworked staff
 		and backlog of requests, rather than any systemic aversion to paying overtime.
@@ -294,7 +291,7 @@
 			
 		</p>
 		<p>
-			[<strong>GRAPHIC: FRES maintenance reponse times]</strong>
+			<iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1MOKP7vf3KyUgqyZQIk7lqSvzyt8tPC1ZQBWirPx6tjU/pubchart?oid=166079103&amp;format=interactive"></iframe>
 		</p>
 		<p>
 			FRES has begun implementing
@@ -311,7 +308,7 @@
 			
 		</p>
 		<p>
-			<strong>SECTION TITLE: Deferring maintenance</strong>
+			<h2> Deferring maintenance</h2>
 		</p>
 		<p>
 			<strong></strong>Mechanics believe the number could be even
@@ -372,15 +369,7 @@
 		deferring problems just creates more costs down the line if leaks worsen.
 			
 		</p>
-	</div>
-	<div>
-		<center>
-			<video width="70%" autoplay loop>
-				<source src="https://s3.amazonaws.com/media.dpn/48655_sinkananyachandrao.mp4"type="video/mp4">
-			</video> 
-		</center>
-	</div>
-	<div class="container" style="margin-left: 10%; padding-right: 10%; padding-top: 30px; position: relative">
+
 		<p>
 			Another decried
 		management tactic is to prioritize maintenance complaints, however small or
