--- a/mold123/index2.html
+++ b/mold123/index2.html
@@ -193,7 +193,7 @@
 		</p>
 	</div>
 	<div style="float:right; padding-right: 30%; padding-left: 30px; padding-bottom: 30px">
-		<video height="600px" autoplay style="float:right">
+		<video height="600px" autoplay loop style="float:right">
 			<source src="https://s3.amazonaws.com/media.dpn/48672_imrancronkfbdownneto.mp4" type="video/mp4">
 		</video> 
 	</div>
@@ -499,7 +499,6 @@
 	<div>
 		<br>
 		<center> 
-		
 			<img class="photo" width = "80%" src="https://s3.amazonaws.com/media.dpn/48674_rodinemailananyachandraf.JPG">
 		</center>
 		<br>
