--- a/maintainence-mayhem/index.html
+++ b/maintainence-mayhem/index.html
@@ -146,7 +146,7 @@
 		<p>
 			n Wednesday, Sept. 17,
 		two plumbers from Penn Facilities and Real Estate services were alerted to a
-		leak in Sansom Place West College House.
+		leak in Sansom West.
 			
 		</p>
 		<p>
@@ -197,7 +197,7 @@
 		the water in the eighth floor room to help contain the leak. The student living
 		there, who did not respond to repeated emails requesting comment and was not
 		available during the time his room was visited, was moved to another room in
-		Sansom. The mold infestation, stemming from what Lou believes were maintenance
+		Sansom West. The mold infestation, stemming from what Lou believes were maintenance
 		problems beginning on Sept. 1, was not sanitized and removed until Sept.
 		23. 
 			
@@ -238,6 +238,11 @@
 		Pennsylvanian, the same specialist that cleared the room in September pointed
 		to darkly-colored mold and said "I see nothing but dirt there." He then advised
 		Lou and other plumbers to "cover up" the mold, rather than formally remove it.
+		
+		</p>
+		<p>
+			Lou was unwilling to share the video publicly because it would have exposed his identity. 
+		It was later erased from his phone. 
 			
 		</p>
 		<p>
@@ -260,7 +265,7 @@
 		
 		<p>
 			Lou's reticence stems
-		from having witnessed an incident in Sansom Place East where a residential
+		from having witnessed an incident in Sansom East where a residential
 		manager allegedly got a rash on both of her arms after attempting to clean away
 		a similar case of mold.
 			
@@ -335,7 +340,7 @@
 		<p>
 			Leo, another FRES
 		mechanic, told the DP about an incident he worked on with contractors on the
-		first floor of Cleemann Hall in Ware College House. A sewage pipe had backed
+		first floor of McClelland Hall in Ware College House. A sewage pipe had backed
 		up, spilling excrement all over the floor &mdash; as graphic photos on his phone
 		confirmed.
 			
@@ -376,7 +381,7 @@
 		<p>
 			Lou disagreed, claiming
 		that contractors were brought in because they would obey the supervisors'
-		orders to cut out the minimum amount of dry wall, saving FRES money but
+		orders to cut out the minimum amount of drywall, saving FRES money but
 		potentially compromising the effectiveness of the mold removal.
 			
 		</p>
@@ -409,7 +414,7 @@
 		</p>
 		<p>
 			During the Sept. 17 job, Lou fought with his area manager over
-		whether or not to remove more dry wall from behind the toilet. His boss wanted
+		whether or not to remove more drywall from behind the toilet. His boss wanted
 		to limit the drywall removed to just the patch where mold was originally seen.
 		Jim wanted a greater portion of the wall taken out to better triangulate the
 		source of the leak and to be especially sure that all signs of mold were gone.
@@ -530,7 +535,7 @@
 		groups of workers under different protocols respond to different leaders. Union
 		workers and contractors are technically both responsive to an area manager, but
 		a union employee may occasionally override his supervisor's command, as in Lou
-		and Brian's cases, and speak directly to their union liaison instead.
+		and John's cases, and speak directly to their union liaison instead.
 		Contractors are obedient mostly to the supervisors, workers say, but cannot
 		coordinate with union employees.
 			
