--- a/maintainence-mayhem/index.html
+++ b/maintainence-mayhem/index.html
@@ -31,9 +31,12 @@
     type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Crimson+Text' rel=
     'stylesheet' type='text/css'>
+	
     <link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel=
     'stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Maven+Pro:500' rel='stylesheet' type='text/css'>
+	<link href='fonts/AndaleMono' rel='stylesheet' type='text/css'>
     <meta charset="utf-8">
 
     <title>Maintenance Mayhem</title>
@@ -97,16 +100,49 @@
     </nav>
 
     <div class="header">
-		<img width="100%" height="100%" src="https://s3.amazonaws.com/media.dpn/48654_mushroom2patgoodridgeo.jpg"></img>
+		<img width="100%" height="100%" src="https://s3.amazonaws.com/media.dpn/48706_top_photo_101o.jpg"></img>
             <!-- <video width="100%" height="100%" autoplay>
                 <source src="https://s3.amazonaws.com/media.dpn/46270_final_no_sound_street_coke_title_clipo.mp4" type="video/mp4">
             </video> 
 			VIDEO IF YOU NEED IT HERE
 			!--> 
     </div>
+	<table width="100%" style="max-height: 100px"> 
+		<tr>
+			<td>
+				<img class="sectiontop" src="https://s3.amazonaws.com/media.dpn/48654_mushroom2patgoodridgep.jpg">
+			</td>
+			<td>
+				<strong>Part 1</strong>  <br> Moldy Walls, Sour Management
+			</td>
+			<td>
+				<img class="sectiontop" src="https://s3.amazonaws.com/media.dpn/48664_toiletspatgoodridgecutp.jpg">
+			</td>
+			<td>
+				<strong>Part 2</strong> <br> No water, no heat
+			</td>
+			<td>
+				<img class="sectiontop" src="https://s3.amazonaws.com/media.dpn/48665_movingoutananyachandraeditp.jpg">
+			</td>
+			<td>
+				<strong>Part 3</strong> <br> Students displaced because of slow maintenance response times
+			</td>
+			<td>
+				<img class="sectiontop" src="https://s3.amazonaws.com/media.dpn/48666_email_invoicesananyachandra_cutp.jpg">
+			</td>
+			<td>
+				<strong> Part 4</strong> <br> Division and dysfunction among maintenance staff
+			</td>
+
+		</tr>
+	</table>
+	
+	<!--
 		<p style="font-size: 30px; margin-left: 10%; max-width: 1200px; margin-top: 50px">
 	From mushrooms growing out of moldy walls to excrement-covered floors, Penn maintenance workers have seen it all. Now, they’re speaking out. In this four-day series, The Daily Pennsylvanian explores why a culture of distrust and dysfunction among maintenance workers, managers and contractors contributes to safety hazards for students and inefficiency for the University. 
 	</p>
+	
+	
 	<p style="font-size: 30px; margin-left: 10%; max-width: 1200px"> <strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;  By Dan Spinelli </strong> </p>
 	
 		<table width="100%" style="margin-left: 20px; margin-top: 60px; display: block; display:inline-block;" > 
@@ -128,25 +164,20 @@
 					<img style=" height: 250px; padding-bottom: 2%; padding: 20px" src="https://s3.amazonaws.com/media.dpn/48656_email_invoicesananyachandrao.jpg">
 				</td>
 			</tr>
-		</table>
+		</table> !-->
 
 
-    <div class="container" style="margin-left: 10%; padding-right: 10%; padding-top: 30px; position: relative">
+		
+    <div class="container">
 
-				
-		 
-		<!-- part 1 !-->
-		<h2 style="text-align:center;padding-left:15%"> Moldy
-		walls, sour management </h2>
-			
 		<!-- this is the drop cap -->
-				<p style=
-				"float:left;color:##000000;font-size:57px;line-height:40px;padding-top:7px; padding-right:5px;font-family: Times, serif, Georgia;">O</p>
-				<!-- drop cap end -->
-		<p>
+		<div style="float:left;color:##000000;font-size:57px;line-height:40px;padding-top:7px; padding-right:5px;font-family: Times, serif, Georgia;">O</div>
+		<!-- drop cap end -->
+		
+			<p>
 			n Wednesday, Sept. 17,
 		two plumbers from Penn Facilities and Real Estate services were alerted to a
-		leak in Sansom Place West College House.
+		leak in Sansom West.
 			
 		</p>
 		<p>
@@ -197,7 +228,7 @@
 		the water in the eighth floor room to help contain the leak. The student living
 		there, who did not respond to repeated emails requesting comment and was not
 		available during the time his room was visited, was moved to another room in
-		Sansom. The mold infestation, stemming from what Lou believes were maintenance
+		Sansom West. The mold infestation, stemming from what Lou believes were maintenance
 		problems beginning on Sept. 1, was not sanitized and removed until Sept.
 		23. 
 			
@@ -238,6 +269,11 @@
 		Pennsylvanian, the same specialist that cleared the room in September pointed
 		to darkly-colored mold and said "I see nothing but dirt there." He then advised
 		Lou and other plumbers to "cover up" the mold, rather than formally remove it.
+		
+		</p>
+		<p>
+			Lou was unwilling to share the video publicly because it would have exposed his identity. 
+		It was later erased from his phone. 
 			
 		</p>
 		<p>
@@ -260,26 +296,24 @@
 		
 		<p>
 			Lou's reticence stems
-		from having witnessed an incident in Sansom Place East where a residential
+		from having witnessed an incident in Sansom East where a residential
 		manager allegedly got a rash on both of her arms after attempting to clean away
 		a similar case of mold.
 			
 		</p>
-		</div>  
-    <p>
-		<img style="float:right;
-		max-height: 500px;
-		max-width: 100%;
 		
-		padding-right: 25%;
-		padding-left: 3%;
-		padding-top: 5%;
-		padding-bottom: 2%" src="https://s3.amazonaws.com/media.dpn/48653_section_1_stuffo.jpg">
-		
-        <br> 
-    </p>
-    <div class="container" style="margin-left: 10%; padding-right: 10%; padding-top: 30px; position: relative">
 		<p>
+			<center>
+			<img style="
+			max-height: 500px;
+			
+			padding-top: 5%;
+			padding-bottom: 2%" src="https://s3.amazonaws.com/media.dpn/48653_section_1_stuffo.jpg">
+			
+			<br> 
+			</center>
+		</p>
+	<p>
 			Mold has not been known to cause rashes, but the Institute of
 		Medicine found in 2004 that exposure to it indoors can cause respiratory
 		illness.
@@ -335,7 +369,7 @@
 		<p>
 			Leo, another FRES
 		mechanic, told the DP about an incident he worked on with contractors on the
-		first floor of Cleemann Hall in Ware College House. A sewage pipe had backed
+		first floor of McClelland Hall in Ware College House. A sewage pipe had backed
 		up, spilling excrement all over the floor &mdash; as graphic photos on his phone
 		confirmed.
 			
@@ -376,7 +410,7 @@
 		<p>
 			Lou disagreed, claiming
 		that contractors were brought in because they would obey the supervisors'
-		orders to cut out the minimum amount of dry wall, saving FRES money but
+		orders to cut out the minimum amount of drywall, saving FRES money but
 		potentially compromising the effectiveness of the mold removal.
 			
 		</p>
@@ -386,30 +420,13 @@
 			
 		</p>
 		<p>
-			
-		</p>
-		<p>
-			<div class="piktowrapper-embed" pikto-uid="9288750-different-organizations-working-on-sept-17-mold-case" >
-				<div class="pikto-canvas-wrap">
-					<div class="pikto-canvas"></div>
-				</div>
-			</div>
-			<script>
-				(function(d){
-					var js, id="pikto-embed-js", ref=d.getElementsByTagName("script")[0];
-					if (d.getElementById(id)) { return;}
-					js=d.createElement("script"); js.id=id; js.async=true;
-					js.src="https://magic.piktochart.com/assets/embedding/embed.js";
-					ref.parentNode.insertBefore(js, ref);
-				}(document));
-			</script>
-		</p>
-		<p>
-			
+			<center>
+			<img style="max-height:700px" src="https://s3.amazonaws.com/media.dpn/48705_graphic_day_101f.jpg">
+			</center>
 		</p>
 		<p>
 			During the Sept. 17 job, Lou fought with his area manager over
-		whether or not to remove more dry wall from behind the toilet. His boss wanted
+		whether or not to remove more drywall from behind the toilet. His boss wanted
 		to limit the drywall removed to just the patch where mold was originally seen.
 		Jim wanted a greater portion of the wall taken out to better triangulate the
 		source of the leak and to be especially sure that all signs of mold were gone.
@@ -530,7 +547,7 @@
 		groups of workers under different protocols respond to different leaders. Union
 		workers and contractors are technically both responsive to an area manager, but
 		a union employee may occasionally override his supervisor's command, as in Lou
-		and Brian's cases, and speak directly to their union liaison instead.
+		and John's cases, and speak directly to their union liaison instead.
 		Contractors are obedient mostly to the supervisors, workers say, but cannot
 		coordinate with union employees.
 			
